Added where to put the file
<link rel="stylesheet" href="/s/style_guide_linked.css"/> in code injection footer

--- a/stylesheet_classes_root.css
+++ b/stylesheet_classes_root.css
@@ -1,3 +1,5 @@
+/* in code injection footer: <link rel="stylesheet" href="/s/style_guide_linked.css"/> */
+
 :root {
   --color-green: #4a666b;
   --color-black: #180222;
