--- a/stylesheet_wip.css
+++ b/stylesheet_wip.css
@@ -79,3 +79,139 @@ a.text-click {
 }
 
 /* classes */
+
+.space_desc_box {
+  /* box with dashed edges- used in Spaces page */
+  border: 1px dashed;
+  padding: 1% 3% 2% 3%;
+  height: 450px;
+  font-size: 80%;
+  background: white;
+
+  h3 {
+    margin: 0.5em auto 0.2em auto;
+    color: var(--color-blue);
+  }
+
+  p2 {
+    font-size: 110%;
+  }
+
+  ul {
+    margin: 0.4em auto 0.4em -0.5em;
+    line-height: -1em;
+    font-size: 110%;
+  }
+
+  button {
+    font-size: 120%;
+    margin: 4% 25% 2% 25%;
+    color: white;
+    background-color: var(--color-blue);
+    padding: 2% 8% 2% 8%;
+    position: absolute;
+    top: 78%;
+    border: none;
+    white-space: nowrap;
+    overflow: hidden;
+  }
+}
+
+.studio_card {
+  /* Space name/type cards to link to indvidual space pages for Book Now page */
+  width: 99%;
+  height: 425px;
+  background: linear-gradient(to bottom, var(--color-blue) 40%, var(--color-blue) 54%, var(--color-light-blue) 50%, var(--color-light-blue) 100%);
+  position: relative;
+  box-shadow: 2px 2px 7px 1px #C0C0C0;
+
+  >* {
+    margin: 0;
+    display: flex;
+    color: white;
+  }
+
+  .img1 {
+    object-fit: cover;
+    height: 40%;
+    width: 100%;
+  }
+
+  h1 {
+    font-size: min(1.1em);
+    color: white;
+    padding: 3% 0% 5% 5%;
+    display: inline-block;
+    max-width: 44%;
+  }
+
+  table {
+    position: absolute;
+    font-size: 80%;
+    display: inline-block;
+    padding-left: 30%;
+    white-space: nowrap;
+    overflow: hidden;
+    line-height: 1.5em;
+  }
+
+  table td {
+    padding: 2px;
+  }
+
+  .tablewide {
+    padding-left: 18%;
+  }
+
+  .middle {
+    width: 99%;
+    height: 20%;
+    display: flex;
+    justify-content: center;
+    top: 57%;
+    color: black;
+    font-size: 17px;
+    position: absolute;
+  }
+
+  .middle img {
+    max-width: 100%;
+    height: 45px;
+  }
+
+  .middle .icon_item {
+    max-height: 80%;
+    display: inline-block;
+    text-align: center;
+    flex: 1;
+  }
+
+  .middle .icon_item span {
+    display: block;
+    padding-top: 5%;
+    line-height: 1.5em;
+  }
+
+  .line {
+    width: 90%;
+    height: 1px;
+    background: var(--color-blue);
+    position: absolute;
+    top: 84%;
+    margin-left: 5%;
+  }
+
+  button {
+    font-size: auto;
+    font-weight: 300;
+    margin: auto 15% auto 19%;
+    color: white;
+    background-color: var(--color-blue);
+    padding: 2% 10% 2% 10%;
+    border: none;
+    white-space: nowrap;
+    overflow: hidden;
+    position: absolute;
+    top: 87%;
+  }
+}
