--- a/stylesheet_wip.css
+++ b/stylesheet_wip.css
@@ -75,6 +75,19 @@ body {
   }
 }
 
+/* --------------------- spaces --------------------- */
+
+svg * {
+  pointer-events: visable;
+}
+
+rect:hover {
+  fill-opacity: 0.3;
+  fill: var(--color-light-blue);
+  filter: blur(5px);
+}
+
+
 /* --------------------- w javascript --------------------- */
 
 a.text-click {
