--- a/stylesheet_wip.css
+++ b/stylesheet_wip.css
@@ -13,9 +13,12 @@ html,
 body {
   max-width: 100%;
   overflow-x: hidden;
-  scroll-behavior: smooth;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+  
 .header-nav-list .header-nav-item:not(:first-child) {
   border-left: 1px solid var(--color-blue);
   margin-left: 1vw !important;
