--- a/stylesheet_wip.css
+++ b/stylesheet_wip.css
@@ -18,7 +18,7 @@ body {
 html {
   scroll-behavior: smooth;
 }
-  
+
 .header-nav-list .header-nav-item:not(:first-child) {
   border-left: 1px solid var(--color-blue);
   margin-left: 1vw !important;
@@ -80,16 +80,6 @@ html {
 }
 
 /* --------------------- spaces --------------------- */
-
-svg * {
-  pointer-events: visable;
-}
-
-rect:hover {
-  fill-opacity: 0.3;
-  fill: var(--color-light-blue);
-  filter: blur(10px);
-}
 
 #block-yui_3_17_2_1_1722358166125_34988 {
   @media screen and (max-width: 900px) {
@@ -174,7 +164,7 @@ a.text-click {
     color: white;
   }
 
-  .img1 {
+  .cover {
     object-fit: cover;
     height: 40%;
     width: 100%;
@@ -206,7 +196,7 @@ a.text-click {
     padding-left: 18%;
   }
 
-  .middle {
+  .icon_row {
     width: 99%;
     height: 20%;
     display: flex;
@@ -217,19 +207,19 @@ a.text-click {
     position: absolute;
   }
 
-  .middle img {
+  .icon_row img {
     max-width: 100%;
     height: 45px;
   }
 
-  .middle .icon_item {
+  .icon_item {
     max-height: 80%;
     display: inline-block;
     text-align: center;
     flex: 1;
   }
 
-  .middle .icon_item span {
+  .icon_item span {
     display: block;
     padding-top: 5%;
     line-height: 1.5em;
@@ -244,7 +234,7 @@ a.text-click {
     margin-left: 5%;
   }
 
-  button {
+  .info_button {
     font-size: auto;
     font-weight: 300;
     margin: auto 15% auto 19%;
@@ -257,4 +247,52 @@ a.text-click {
     position: absolute;
     top: 87%;
   }
+}
+
+
+.map-wrapper {
+  /* Space map on spaces page w/ click to jump down */
+  width: 100%;
+  position: relative;
+
+  .map-area {
+    position: absolute;
+    fill-opacity: 0;
+  }
+
+  rect:hover {
+    fill-opacity: 0.3;
+    fill: var(--color-light-blue);
+    filter: blur(10px);
+  }
+}
+
+html {
+  scroll-behavior: smooth
+}
+
+#back-to-top {
+  /* scroll back to the map on spaces page */
+  height: 50px;
+  width: 50px;
+  position: fixed;
+  right: 0;
+  z-index: 99;
+
+  border-radius: 50%;
+  box-shadow: 0px 0px 5px #ccc;
+  margin: 17px;
+  background: white;
+
+  /*Position Out of View*/
+  bottom: -150px;
+  opacity: 0;
+  transition: all .5s ease;
+}
+
+#back-to-top.show-btt {
+  /*Position In View*/
+  bottom: 0;
+  opacity: 1;
+  transition: all .5s ease;
 }
