--- a/style_sheet.css
+++ b/style_sheet.css
@@ -314,6 +314,7 @@ a.text-click {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+
   @media screen and (max-width: 900px) {
     display: none;
   }
@@ -345,7 +346,26 @@ a.text-click {
 .prev:hover,
 .next:hover {
   background-color: var(--color-light-blue);
+
   @media screen and (max-width: 900px) {
     display: none;
   }
+}
+
+
+#changeText {
+  /* swap between words on home page */
+  opacity: 1;
+  transition: opacity 0.5s;
+  display: inline-block;
+  width: 30%;
+  margin-top: 0;
+  
+  @media screen and (max-width: 900px) {
+    width: 100%;
+  }
+}
+
+.hide {
+  opacity: 0 !important;
 }
