--- a/style_sheet.css
+++ b/style_sheet.css
@@ -81,7 +81,6 @@ html {
   }
 }
 
-
 /* --------------------- spaces --------------------- */
 
 
@@ -113,13 +112,14 @@ a.text-click {
   /* box with dashed edges- used in Spaces page */
   border: 1px dashed;
   padding: 1% 3% 2% 3%;
-  height: 450px;
+  height: 400px;
   font-size: 80%;
   background: white;
 
   h3 {
     margin: 0.5em auto 0.2em auto;
     color: var(--color-blue);
+		text-align: center;
   }
 
   p2 {
@@ -139,7 +139,7 @@ a.text-click {
     background-color: var(--color-blue);
     padding: 2% 8% 2% 8%;
     position: absolute;
-    top: 78%;
+    top: 80%;
     border: none;
     white-space: nowrap;
     overflow: hidden;
@@ -148,73 +148,20 @@ a.text-click {
   button:hover {
     background-color: var(--color-blue-hover);
   }
-}
-
-.studio_card {
-  /* Space name/type cards to link to indvidual space pages for Book Now page */
-  width: 99%;
-  height: 425px;
-  background: linear-gradient(to bottom, var(--color-blue) 40%, var(--color-blue) 54%, var(--color-light-blue) 50%, var(--color-light-blue) 100%);
-  position: relative;
-  box-shadow: 2px 2px 7px 1px #C0C0C0;
-
-  >* {
-    margin: 0;
-    display: flex;
-    color: white;
-  }
-
-  .cover {
-    object-fit: cover;
-    height: 40%;
-    width: 100%;
-  }
-
-  h1 {
-    font-size: min(1.1em);
-    color: white;
-    padding: 3% 0% 5% 5%;
-    display: inline-block;
-    max-width: 44%;
-  }
-
-  table {
-    position: absolute;
-    font-size: 80%;
-    display: inline-block;
-    padding-left: 30%;
-    white-space: nowrap;
-    overflow: hidden;
-    line-height: 1.5em;
-  }
-
-  table td {
-    padding: 2px;
-  }
-
-  .tablewide {
-    padding-left: 18%;
-  }
-
-  .icon_row {
-    width: 99%;
-    height: 20%;
-    display: flex;
-    justify-content: center;
-    top: 57%;
-    color: black;
-    font-size: 17px;
-    position: absolute;
+	
+	.icon_row {
+		width: 100%;
+		margin-top: 3%;
+		margin-bottom: 5%;
+		display: flex;
   }
 
   .icon_row img {
-    max-width: 100%;
     height: 45px;
   }
 
   .icon_item {
     max-height: 80%;
-    display: inline-block;
     text-align: center;
     flex: 1;
   }
@@ -223,32 +170,9 @@ a.text-click {
     display: block;
     padding-top: 5%;
     line-height: 1.5em;
-  }
-
-  .line {
-    width: 90%;
-    height: 1px;
-    background: var(--color-blue);
-    position: absolute;
-    top: 84%;
-    margin-left: 5%;
-  }
-
-  .info_button {
-    font-size: auto;
-    font-weight: 300;
-    margin: auto 15% auto 19%;
-    color: white;
-    background-color: var(--color-blue);
-    padding: 2% 10% 2% 10%;
-    border: none;
-    white-space: nowrap;
-    overflow: hidden;
-    position: absolute;
-    top: 87%;
+		font-size:110%;
   }
 }
-
 
 .map-wrapper {
   /* Space map on spaces page w/ click to jump down */
@@ -308,23 +232,6 @@ a.text-click {
   }
 }
 
-.dot {
-  height: 15px;
-  width: 15px;
-  background-color: var(--color-green-hover);
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-
-  @media screen and (max-width: 900px) {
-    display: none;
-  }
-}
-
-.active {
-  background-color: var(--color-green);
-}
-
 .prev,
 .next {
   cursor: pointer;
@@ -360,11 +267,6 @@ a.text-click {
   transition: opacity 0.5s;
   display: inline-block;
   width: 30%;
-  margin-top: 0;
-  
-  @media screen and (max-width: 900px) {
-    width: 100%;
-  }
 }
 
 .hide {
