--- a/style_sheet.css
+++ b/style_sheet.css
@@ -3,6 +3,7 @@
   --color-green-hover: #b6c1c3;
   --color-black: #180222;
   --color-light-blue: #c3e7ef;
+  --color-light-blue-hover: #b8dae3;
   --color-yellow: #e6edaa;
   --color-blue: #405aa8;
   --color-blue-hover: #6177A8;
@@ -71,9 +72,7 @@ html {
 
   /* modifying title size in booking process boxes */
   .sqsrte-text-color--accent {
-    @media screen and (max-width: 900px) {
-      font-size: 1.3em;
-    }
+    font-size: 1.3em;
 
     @media screen and (min-width: 900px) {
       font-size: 95%;
@@ -99,8 +98,8 @@ a.text-click {
   border-radius: 30px;
 }
 
-@media screen and (min-width: 900px) {
-  a.text-click:hover {
+a.text-click:hover {
+  @media screen and (min-width: 900px) {
     background: var(--color-light-blue);
     opacity: 0.1;
   }
@@ -138,9 +137,10 @@ a.text-click {
   position: relative;
   margin: auto;
   max-height: 425px;
+
   @media screen and (max-width: 900px) {
-      max-height: 100px;
-    }
+    max-height: 100px;
+  }
 
   img {
     vertical-align: middle;
@@ -172,9 +172,8 @@ a.text-click {
 
 .prev:hover,
 .next:hover {
-  background-color: var(--color-light-blue);
-  @media screen and (max-width: 900px) {
-    background-color: rgba(0,0,0,0);
+  @media screen and (min-width: 900px) {
+    background-color: var(--color-light-blue);
   }
 }
 
@@ -199,69 +198,34 @@ a.text-click {
   border: 1px dashed;
   padding: 1% 3% 2% 3%;
   height: 400px;
-  font-size: 80%;
   background: white;
 
   h3 {
-    margin: 0.5em auto 0.2em auto;
+    margin: 0.2em auto 0.3em auto;
     color: var(--color-blue);
     text-align: center;
   }
 
-  p2 {
-    font-size: 110%;
-  }
-
-  ul {
-    margin: 0.4em auto 0.4em -0.5em;
-    line-height: -1em;
-    font-size: 110%;
-  }
-
   button {
     font-size: 120%;
-    margin: 4% 25% 2% 28%;
+    margin-left: 26%;
     color: white;
     background-color: var(--color-blue);
     padding: 2% 8% 2% 8%;
     position: absolute;
-    top: 75%;
+    top: 78%;
     border: none;
     white-space: nowrap;
     overflow: hidden;
-    
+
     @media screen and (max-width: 900px) {
-      margin-left: 15%;
-      top: 78%;
+      margin-left: 12%;
+      top: 82%;
     }
   }
 
   button:hover {
     background-color: var(--color-blue-hover);
-  }
-
-  .icon_row {
-    width: 100%;
-    margin-top: 3%;
-    margin-bottom: 5%;
-    display: flex;
-  }
-
-  .icon_row img {
-    height: 45px;
-  }
-
-  .icon_item {
-    max-height: 80%;
-    text-align: center;
-    flex: 1;
-  }
-
-  .icon_item span {
-    display: block;
-    padding-top: 5%;
-    line-height: 1.5em;
-    font-size: 110%;
   }
 }
 
@@ -282,34 +246,101 @@ a.text-click {
   }
 }
 
-.space_header_row {
-  /* Indvidual spaces page icons under title */
+.icon_row {
+  /* Puts icons in row evenly spaced */
   display: flex;
+  width: 100%;
+  margin-bottom: 10px;
+
+  @media screen and (max-width: 900px) {
+    margin-bottom: 3px;
+  }
+}
+
+.space_icon {
+  /* Icon for guests, sqft, etc */
+  text-align: center;
+  flex: 1;
+
+  p2 {
+    display: block;
+    padding-top: 4%;
+  }
 
   img {
     height: 45px;
   }
+}
 
-  .pricing {
-    flex: 1;
 
-    .item {
-      img {
-        height: 20px !important;
-        float: left;
-        margin-right: 10px;
-      }
+.icon_text_list {
+  /* List of icons next to text */
+  flex: 1;
+
+  .item {
+    img {
+      height: 20px !important;
+      float: left;
+      margin-right: 10px;
+    }
+
+    margin-bottom: -5px;
+  }
+}
+
+
+.two_columns {
+  /* Two equal width columns with titles */
+  display: flex;
+
+  .column {
+    flex: 50%;
+
+    h4 {
+      margin-top: 0;
+      margin-bottom: -5px;
     }
   }
+}
 
-  .icon {
-    text-align: center;
-    flex: 1;
-    margin-top: 15px;
+
+.dropdown {
+  /* dropdown with links */
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown_button {
+  font-size: 120%;
+  color: white;
+  background-color: var(--color-blue);
+  padding: 16px;
+  border: none;
+
+  .button:hover {
+    background-color: var(--color-blue-hover);
   }
+}
 
-  .icon span {
+.dropdown_content {
+  display: none;
+  position: absolute;
+  background-color: var(--color-light-blue);
+  min-width: 150px;
+  border: 1px var(--color-green);
+  z-index: 1;
+
+  a {
+    color: var(--color-black);
+    padding: 12px 16px;
     display: block;
-    padding-top: 4%;
   }
+
+  a:hover {
+    background-color: var(--color-light-blue-hover);
+  }
+}
+
+.show_dropdown {
+  display: block;
 }
