--- a/style_sheet.css
+++ b/style_sheet.css
@@ -33,6 +33,12 @@ html {
   padding-bottom: 5px;
 }
 
+.accordion-divider {
+  color: transparent !important;
+  height: 0 !important;
+  border-top: 1px solid var(--color-blue);
+}
+
 /* --------------------- pages --------------------- */
 
 /* --------------------- only home page --------------------- */
@@ -43,14 +49,6 @@ html {
     border-top: 1px solid var(--color-blue);
     padding-top: 10px;
     margin-top: -17px;
-  }
-}
-
-@media screen and (min-width: 900px) {
-
-  /* fixing spacing on mobile from lines */
-  #block-yui_3_17_2_1_1720015239357_19291 h3 {
-    line-height: 60px;
   }
 }
 
@@ -293,6 +291,7 @@ a.text-click:hover {
   display: flex;
 
   .column {
+    flex: 50%;
 
     h4 {
       margin-top: 0;
@@ -358,7 +357,8 @@ a.text-click:hover {
     display: flex;
     align-items: center;
 
-    img, i {
+    img,
+    i {
       height: 20px !important;
       float: left;
       margin-right: 10px;
@@ -383,10 +383,6 @@ a.text-click:hover {
   justify-content: space-between;
 
   img {
-  	height: 30px;
+    height: 30px;
   }
-	
-	title {
-		
-	}
 }
