--- a/style_sheet.css
+++ b/style_sheet.css
@@ -344,7 +344,7 @@ a.text-click:hover {
   /* Puts icons in row evenly spaced */
   width: 90%;
   display: inline-flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   grid-gap: 20px;
 
   @media screen and (max-width: 900px) {
